classe VersSacADos- conversion de projet en objet amélioration de qlqs méthodes (ajout des vérifications de param - copies..etc)